fix: small css hack to make it look nice on mobile devices

--- a/src/styles/animations.scss
+++ b/src/styles/animations.scss
@@ -29,12 +29,14 @@
 @keyframes lineglow {
   0% {
     width: 0;
+    height: $horizontal-line-height;
     border: calc($horizontal-line-height/2) solid color.scale($text-color, $lightness: $lighten-by);
     filter: blur($blur-amount) drop-shadow(0 0 $blur-amount);
   }
 
   100% {
     width: 100%;
+    height: 0;
     border: calc($horizontal-line-height/2) solid $text-color;
     filter: blur(0px) drop-shadow(0 0 $blur-amount);
   }
